# stuff

./: .gitmodules  CMakeLists.txt  add_submodules.sh  build_linux.sh  build_mingw.bat  build_vs.bat  readme.md  remove_spaces.py  remove_submodules.sh
.github/workflows/: main.yml
games/: CMakeLists.txt
games/clicker/: CMakeLists.txt
games/clicker/src/: app.cpp  app.hpp
